# qddate

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  PERFORMANCE_ANALYSIS.md  README.md  README.rst  pyproject.toml  reproduce_issues.py  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
benchmarks/: PERFORMANCE_TEST_FAILURES.md  README_PERFORMANCE_TEST.md  baseline_test.json  bench.py  benchmark_webpage_data.py  comprehensive_performance_test.py  generate_test_data.py  profile_bench.py  test_data.csv  webpage_test_data.csv
benchmarks/results/: performance_report_20260102_175004.json  performance_report_20260102_175726.json  performance_report_20260102_175758.json  performance_report_20260102_175929.json  performance_report_20260102_180031.json  performance_report_20260102_181018.json  performance_report_20260102_204355.json  performance_report_20260102_212707.json  performance_report_20260102_215936.json  performance_report_20260102_220552.json  performance_report_20260102_220810.json  performance_report_20260102_223013.json  performance_report_20260102_224430.json  performance_report_20260102_232533.json  performance_report_20260102_233010.json  (+90 more)
docs/: COMPARISON.md  PATTERNS.md  authors.md  benchmark.md  benchmark.rst  conf.md  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  make.bat  modules.md  qddate.md  qddate.patterns.md  qddate.patterns.rst  qddate.rst  usage.md
docs_/: Makefile  authors.md  benchmark.md  benchmark.rst  conf.md  conf.py  conf.rst  contributing.md  history.md  index.md  index.rst  installation.md  modules.md  qddate.md  qddate.patterns.md  qddate.patterns.rst  qddate.rst  usage.md  usage.rst
profile_results/: initialization_20260102_132001.txt  match_20260102_132001.txt  match_prefix_20260102_132001.txt  parse_20260102_132001.txt  summary_20260102_132001.json
qddate/: __init__.py  consts.py  dirty.py  qdparser.py
scripts/: benchmark_packrat.py  generate_pattern_docs.py  generate_webpage_test_data.py  profile_performance.py
tests/: bench.py  test_dateparser.py  test_performance.py
(+53 files in other folders)
